--- a/doc/dnnopt_doc.tex
+++ b/doc/dnnopt_doc.tex
@@ -421,5 +421,5 @@ file (named, for example \verb|analysis01|) and placing in it the above command,
   mv srcdir/code.py .
 \end{verbatim}  
 
-\bibliography{dnnopt}
+\bibliography{dnnopt_doc}
 \end{document}
